adding css in the index file

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<!-- working from linux -->
         <head>
                 <title> Jae-Won's Website </title>
+		<link rel="stylesheet" type="text/css" href="/css/main.css">
         </head>
         <body>
                 <nav>
