added about page and CV

--- a/subpages/about.html
+++ b/subpages/about.html
@@ -2,7 +2,7 @@
 <html>
 	<!-- working from linux -->
         <head>
-                <title> Jae-Won's Website </title>
+                <title> About </title>
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
         </head>
         <body>
@@ -10,18 +10,22 @@
                 <ul>
                         <li><a href="/">Home</a></li>
                         <li><a href="/subpages/about.html">About</a></li>
-                        <li><a href="/subpages/NewResume.pdf">CV</a></li>
+                        <li><a href="/cv">CV</a></li>
                         <li><a href="/publications">Publications</a></li>
                         <li><a href="/projects">Projects</a></li>
                 </ul>
                 </nav>
                 <div class="container"> <!-- division -->
                         <div class="stuff">
-                                <h1> Welcome to my website!</h1> <!-- heading -->
-                                        <p> I'm currently a graduate student studying in Penn State University majoring in Computer
-                                                Engineering. Also looking forward to maintaining this website for some side projects
-                                                in regards to database related to baseball :) 
+                                <h1> About!</h1> <!-- heading -->
+                                        <p> 
+						So my name is Jae-Won, I was born in South Korea and have graduated B.S in Computer Engineering with
+						GPA of 3.69 / 4.00 and M.S in Computer Engineering with GPA of 3.76 / 4.00 from University of South Florida.
                                         </p>
+					<p>
+						My hobby is to play tennis and working out, I also have a goal to meet my daily routine which is to workout endlessly
+						as well as trying my best to make every day productive.
+					</p>
                         </div> <!-- stuff -->
                                                 
                 
