--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
                         <li><a href="/">Home</a></li>
                         <li><a href="/subpages/about.html">About</a></li>
                         <li><a href="/subpages/NewResume.pdf">CV</a></li>
-                        <li><a href="/publications">Publications</a></li>
+                        <li><a href="/subpages/publication.html">Publications</a></li>
                         <li><a href="/projects">Projects</a></li>
                 </ul>
                 </nav>
