fixing index and pub

--- a/subpages/about.html
+++ b/subpages/about.html
@@ -19,12 +19,13 @@
                         <div class="stuff">
                                 <h1> About!</h1> <!-- heading -->
                                         <p> 
-						So my name is Jae-Won, I was born in South Korea and have graduated B.S in Computer Engineering with
+						My name is Jae-Won, I was born in South Korea and have graduated B.S in Computer Engineering with
 						GPA of 3.69 / 4.00 and M.S in Computer Engineering with GPA of 3.76 / 4.00 from University of South Florida.
                                         </p>
 					<p>
-						My hobby is to play tennis and working out, I also have a goal to meet my daily routine which is to workout endlessly
-						as well as trying my best to make every day productive.
+						My hobby is to play tennis and working out, I also have a goal to meet my daily routine which is to workout to keep myself fit
+						as well as trying my best to make every day productive. On the side note.... I'm a HUGE fan of Dodgers and Lakers! Have been supporting
+						both of these teams since 1997 and unfortunately got my heartbroken recently with Dodgers, but still love the team!
 					</p>
                         </div> <!-- stuff -->
                                                 
