--- a/subpages/publication.html
+++ b/subpages/publication.html
@@ -17,7 +17,8 @@
                 </nav>
                 <div class="container"> <!-- division -->
                         <div class="stuff">
-                                <h1>Journals</h1> <!-- heading -->
+				<h1>Publications</h1>
+                                <h2>Journals</h2> <!-- heading -->
                                           <ul>
 						<li>Jae-Won Jang, Asmit De, Deepak Vontela, Ithihasa Nirmala, Swaroop Ghosh, and Anirudh Iyengar, “Threshold-defined Logic and Interconnect for Protection against Reverse Engineering”, Transactions on Information Forensics and Security (TFIS). (Impact Factor: 4.3) – Submitted For Review - </li>
 
@@ -41,11 +42,11 @@
 						<li>Alexander Holst, Jae-Won Jang and Swaroop Ghosh, “Investigation of Magnetic Field-Based Attacks on Magnetoresistive Random-Access Memory”, International Symposium on Quality Electronic Design Conference (ISQED), 2017.</li>
 						<li>Swaroop Ghosh, Nasim Khan, Asmit De, Jae-Won Jang, “Security and Privacy Threats to On-Chip Non-Volatile Memories and Countermeasures”, Proceedings of the 35th International Conference on Computer-Aided Design (ICCAD ’16), 2016 (Invited Paper).</li>
 					</ul>
-				<h3>Work-in-Progress / Demonstration</h3>
+				<h2>Work-in-Progress / Demonstration</h2>
 					<ul>
 						<li>Jae-Won Jang and Swaroop Ghosh, “Data Integrity of STTRAM Vulnerabilities, Attack Models and Preventions”, Design Automation Conference (DAC), 2016 (WIC).</li>
 						<li>Alexander Holst, Swaroop Ghosh, and Jae-Won Jang, “Investigation of Magnetic Field-Based Attacks on Magnetoresistive Random-Access Memory (Demo Proposal)”, IEEE International Symposium on Hardware Oriented Security and Trust (HOST), 2016.</li>
-						<li>Anirudh Iyengar, Kenneth Ramclam, Jae-Won Jang and Cheng Wei Lin, Spintronic PUFs for Security, Trust and Authentication, Cyber Security Awareness Week Conference (CSAW), 2014. (3rd Place)<li>
+						<li>Anirudh Iyengar, Kenneth Ramclam, Jae-Won Jang and Cheng Wei Lin, Spintronic PUFs for Security, Trust and Authentication, Cyber Security Awareness Week Conference (CSAW), 2014. (3rd Place)</li>
 
 					</ul>
                         </div> <!-- stuff -->
