--- a/index.html
+++ b/index.html
@@ -33,11 +33,12 @@
 				<!-- Intro -->
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
-							<h1>Hyperspace</h1>
-							<p>Just another fine responsive site template designed by <a href="http://html5up.net">HTML5 UP</a><br />
-							and released for free under the <a href="http://html5up.net/license">Creative Commons</a>.</p>
+							<h1>Welcome!</h1>
+							<p>I'm currently a graduate student majoring in Computer Engineering studying in PSU. <br />
+								Will keep this website updated and upload some side database projects related to baseball
+							</p>
 							<ul class="actions">
-								<li><a href="#one" class="button scrolly">Learn more</a></li>
+								<li><a href="#intro" class="button scrolly">Learn more</a></li>
 							</ul>
 						</div>
 					</section>
@@ -51,7 +52,7 @@
 									<h2>Sed ipsum dolor</h2>
 									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
 									<ul class="actions">
-										<li><a href="#" class="button">Learn more</a></li>
+										<li><a href="https://linkedin.com/in/jjang17" class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
