lots of changes

--- a/index.html
+++ b/index.html
@@ -34,53 +34,46 @@
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
 							<h1>Welcome!</h1>
-							<p>I'm currently a graduate student majoring in Computer Engineering studying in PSU. <br />
-								Will keep this website updated and upload some side database projects related to baseball
+							<p>My name is Jae-Won and I'm currently a graduate student majoring in Computer Engineering studying in PSU. <br />
+								Will keep this website updated and upload some side database projects related to baseball (OOTP mostly) :)
 							</p>
 							<ul class="actions">
-								<li><a href="#intro" class="button scrolly">Learn more</a></li>
+								<li><a href="https://linkedin.com/in/jjang17" class="button">Learn More</a></li>
 							</ul>
 						</div>
 					</section>
 
-				<!-- One -->
-					<section id="about" class="wrapper style2 spotlights">
+				<!-- about -->
+					<section id="about me" class="wrapper style2 spotlights">
+						<h1> About Me! </h1>
 						<section>
-							<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
+							<a href="#" class="image"><img src="images/korea.jpg" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Sed ipsum dolor</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
-									<ul class="actions">
-										<li><a href="https://linkedin.com/in/jjang17" class="button">Learn more</a></li>
-									</ul>
+									<h2>South Korea</h2>
+									<p>I am South Korean! Was born in Incheon and immigrated to United States of America around 2001 and been living here since then!</p>
 								</div>
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
+							<a href="#" class="image"><img src="images/tennis2.jpg" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Feugiat consequat</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
-									<ul class="actions">
-										<li><a href="#" class="button">Learn more</a></li>
-									</ul>
+									<h2>Tennis</h2>
+									<p>I love playing tennis! Always striving to be better and gives me something to work on every time I play.</p>	
 								</div>
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>
+							<a href="#" class="image"><img src="images/dodgers.jpg" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Ultricies aliquam</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
-									<ul class="actions">
-										<li><a href="#" class="button">Learn more</a></li>
-									</ul>
+									<h2>Baseball</h2>
+									<p>Watching baseball is definitely my passion. My favorite team is Los Angeles Dodgers (yes I'm heartbroken by 2017 WS loss :() and have been passionately following this team since 1998!</p>
 								</div>
 							</div>
 						</section>
+						
 					</section>
 
 				<!-- Two -->
