trying out diff flavor

--- a/index.html
+++ b/index.html
@@ -44,8 +44,12 @@
 					</section>
 
 				<!-- about -->
-					<section id="about me" class="wrapper style2 spotlights">
-						<h1> About Me! </h1>
+					<!--<section id="about" class="wrapper style2 spotlights">-->
+					<section id="about" class="wrapper style1 fullscreen fade-up">
+
+						<div class="inner">
+							<h1> About Me! </h1>
+						</div>
 						<section>
 							<a href="#" class="image"><img src="images/korea.jpg" alt="" data-position="25% 25%" /></a>
 							<div class="content">
