--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Hyperspace by HTML5 UP</title>
+		<title>Jae-Won's Webpage</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -48,7 +48,7 @@
 					<section id="about" class="wrapper style1 fullscreen fade-up">
 
 						<div class="inner">
-							<h1> About Me! </h1>
+							<h2> About Me! </h2>
 						</div>
 						<section>
 							<a href="#" class="image"><img src="images/korea.jpg" alt="" data-position="25% 25%" /></a>
@@ -60,7 +60,7 @@
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/tennis2.jpg" alt="" data-position="center center" /></a>
+							<a href="#" class="image"><img src="images/tennis2.jpg" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Tennis</h2>
@@ -69,7 +69,7 @@
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/dodgers.jpg" alt="" data-position="center center" /></a>
+							<a href="#" class="image"><img src="images/dodgers.jpg" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Baseball</h2>
