--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 							<h2> About Me! </h2>
 						</div>
 						<section>
-							<a href="#" class="image"><img src="images/korea.jpg" alt="" data-position="25% 25%" /></a>
+							<a href="#" class="image"><img src="images/korea.jpg" alt="" height="320" width="240" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>South Korea</h2>
@@ -60,7 +60,7 @@
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/tennis2.jpg" alt="" data-position="25% 25%" /></a>
+							<a href="#" class="image"><img src="images/tennis2.jpg" alt=""  height="320" width="240" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Tennis</h2>
@@ -69,7 +69,7 @@
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/dodgers.jpg" alt="" data-position="25% 25%" /></a>
+							<a href="#" class="image"><img src="images/dodgers.jpg" alt=""  height="320" width="240" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Baseball</h2>
