--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 							<h2> About Me! </h2>
 						</div>
 						<section>
-							<a href="#" class="image"><img src="images/korea.jpg" alt="" height="320" width="240" data-position="25% 25%" /></a>
+							<img src="images/korea.jpg" alt="" height="320" width="240" data-position="25% 25%" />
 							<div class="content">
 								<div class="inner">
 									<h2>South Korea</h2>
@@ -60,7 +60,7 @@
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/tennis2.jpg" alt=""  height="320" width="240" data-position="25% 25%" /></a>
+							<img src="images/tennis2.jpg" alt=""  height="320" width="240" data-position="25% 25%" />
 							<div class="content">
 								<div class="inner">
 									<h2>Tennis</h2>
@@ -69,7 +69,7 @@
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/dodgers.jpg" alt=""  height="320" width="240" data-position="25% 25%" /></a>
+							<img src="images/dodgers.jpg" alt=""  height="320" width="240" data-position="25% 25%" />
 							<div class="content">
 								<div class="inner">
 									<h2>Baseball</h2>
@@ -83,43 +83,38 @@
 				<!-- Two -->
 					<section id="cv" class="wrapper style3 fade-up">
 						<div class="inner">
-							<h2>What we do</h2>
-							<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
+							<h2>CV</h2>
+							<ul class="actions">
+								<li><a href="#" class="button">Here is my CV in PDF format</a></li>
+							</ul>
+							<p>You can download the detailed CV up above, but here are the main strengths I bring for the company and the lab.</p>
 							<div class="features">
 								<section>
 									<span class="icon major fa-code"></span>
-									<h3>Lorem ipsum amet</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<h3>Diligent</h3>
 								</section>
 								<section>
 									<span class="icon major fa-lock"></span>
-									<h3>Aliquam sed nullam</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<h3>Self-Motivated</h3>
 								</section>
 								<section>
 									<span class="icon major fa-cog"></span>
-									<h3>Sed erat ullam corper</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<h3>Friendly</h3>
 								</section>
 								<section>
 									<span class="icon major fa-desktop"></span>
-									<h3>Veroeros quis lorem</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<h3>Willingness to Learn</h3>
 								</section>
 								<section>
 									<span class="icon major fa-chain"></span>
-									<h3>Urna quis bibendum</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<h3>Open-Minded</h3>
 								</section>
 								<section>
 									<span class="icon major fa-diamond"></span>
-									<h3>Aliquam urna dapibus</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<h3>Debugging</h3>
 								</section>
 							</div>
-							<ul class="actions">
-								<li><a href="#" class="button">Learn more</a></li>
-							</ul>
+							
 						</div>
 					</section>
 
