--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 					</section>
 
 				<!-- about -->
-					<!--<section id="about" class="wrapper style2 spotlights">-->
-					<section id="about" class="wrapper style1 fullscreen fade-up">
+					<section id="about" class="wrapper style2 spotlights">
+					<!--<section id="about" class="wrapper style1 fullscreen fade-up">-->
 
 						<div class="inner">
 							<h2> About Me! </h2>
@@ -87,16 +87,16 @@
 						<div class="inner">
 							<h2>CV</h2>
 							<ul class="actions">
-								<li><a href="#" class="button">Here is my CV in PDF format</a></li>
+								<li><a href="subpages/NewResume.pdf" class="button">Here is my CV in PDF format</a></li>
 							</ul>
 							<p>You can download the detailed CV up above, but here are the main strengths I bring for the company and the lab.</p>
 							<div class="features">
 								<section>
-									<span class="icon major fa-code"></span>
+									<span class="icon major fa-cog"></span>
 									<h3>Diligent</h3>
 								</section>
 								<section>
-									<span class="icon major fa-lock"></span>
+									<span class="icon major fa-cog"></span>
 									<h3>Self-Motivated</h3>
 								</section>
 								<section>
@@ -104,15 +104,15 @@
 									<h3>Friendly</h3>
 								</section>
 								<section>
-									<span class="icon major fa-desktop"></span>
+									<span class="icon major fa-cog"></span>
 									<h3>Willingness to Learn</h3>
 								</section>
 								<section>
-									<span class="icon major fa-chain"></span>
+									<span class="icon major fa-cog"></span>
 									<h3>Open-Minded</h3>
 								</section>
 								<section>
-									<span class="icon major fa-diamond"></span>
+									<span class="icon major fa-cog"></span>
 									<h3>Debugging</h3>
 								</section>
 							</div>
