--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 							<h2> About Me! </h2>
 						</div>
 						<section>
-							<img src="images/korea.jpg" alt="" height="320" width="240" data-position="25% 25%" />
+							<img src="images/korea.jpg" alt="" height="240" width="240" data-position="25% 25%" />
 							<div class="content">
 								<div class="inner">
 									<h2>South Korea</h2>
@@ -123,57 +123,42 @@
 				<!-- Three -->
 					<section id="pubs" class="wrapper style1 fade-up">
 						<div class="inner">
-							<h2>Get in touch</h2>
-							<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
-							<div class="split style1">
-								<section>
-									<form method="post" action="#">
-										<div class="field half first">
-											<label for="name">Name</label>
-											<input type="text" name="name" id="name" />
-										</div>
-										<div class="field half">
-											<label for="email">Email</label>
-											<input type="text" name="email" id="email" />
-										</div>
-										<div class="field">
-											<label for="message">Message</label>
-											<textarea name="message" id="message" rows="5"></textarea>
-										</div>
-										<ul class="actions">
-											<li><a href="" class="button submit">Send Message</a></li>
-										</ul>
-									</form>
-								</section>
-								<section>
-									<ul class="contact">
-										<li>
-											<h3>Address</h3>
-											<span>12345 Somewhere Road #654<br />
-											Nashville, TN 00000-0000<br />
-											USA</span>
-										</li>
-										<li>
-											<h3>Email</h3>
-											<a href="#">user@untitled.tld</a>
-										</li>
-										<li>
-											<h3>Phone</h3>
-											<span>(000) 000-0000</span>
-										</li>
-										<li>
-											<h3>Social</h3>
-											<ul class="icons">
-												<li><a href="#" class="fa-twitter"><span class="label">Twitter</span></a></li>
-												<li><a href="#" class="fa-facebook"><span class="label">Facebook</span></a></li>
-												<li><a href="#" class="fa-github"><span class="label">GitHub</span></a></li>
-												<li><a href="#" class="fa-instagram"><span class="label">Instagram</span></a></li>
-												<li><a href="#" class="fa-linkedin"><span class="label">LinkedIn</span></a></li>
-											</ul>
-										</li>
-									</ul>
-								</section>
-							</div>
+							<h2>Publications</h2>
+							<p></p>
+							<div class="stuff">
+							<h1>Publications</h1>
+                                				<h2>Journals</h2> <!-- heading -->
+                                          			<ul>
+									<li>Jae-Won Jang, Asmit De, Deepak Vontela, Ithihasa Nirmala, Swaroop Ghosh, and Anirudh Iyengar, “Threshold-defined Logic and Interconnect for Protection against Reverse Engineering”, Transactions on Information Forensics and Security (TFIS). (Impact Factor: 4.3) – Submitted For Review - </li>
+
+    									<li>Anirudh Iyengar, Swaroop Ghosh, and Jae-Won Jang, “MTJ-based State Retentive Flip-Flop with Enhanced-Scan Capability to Sustain Sudden Power Failure”, Transactions on Circuits and Systems I (TCAS-I). (Impact Factor: 2.3) </li>
+
+									<li>Swaroop Ghosh, Anirudh Iyengar, Seyedhamidreza Motaman, Rekha Govindaraj, Jae-Won Jang, Jinil Chung, Jongsun Park, Xin Li, Rajiv Joshi, and Dinesh Somasekhar, “Overview of Circuits, Systems, and Applications of Spintronics”, IEEE Journal on Emerging and Selected Topics in Circuits and Systems (JETCAS). (Impact Factor: 1.6) </li>
+
+									<li>Anirudh Iyengar, Kenneth Ramclam, Swaroop Ghosh, Jae-Won Jang and Cheng-Wei Lin, “Spintronic PUFs for Security, Trust and Authentication”, ACM Journal of Emerging Topics Computing Systems (JETC Special Issue). (Impact Factor 0.83)  </li>
+					  			</ul>
+								<h2>Conference Papers</h2>
+								<ul>
+									<li>Jae-Won Jang, Jongsun Park, Swaroop Ghosh, and Swarup Bhunia, “Self-Correcting STTRAM under Magnetic Field Attacks”, Design Automation Conference (DAC), 2015.</li>
+									<li>Jae-Won Jang and Swaroop Ghosh, “Performance Impact of Magnetic and Thermal Attack on STTRAM and Low-Overhead Mitigation Techniques”, The International Symposium on Low Power Electronics and Design (ISLPED), 2016. Acceptance Rate = ~25%</li>
+									<li>Jae-Won Jang and Swaroop Ghosh, “Design and Analysis of Novel SRAM PUFs with Embedded Latch for Robustness”, International Symposium on Quality Electronic Design Conference (ISQED), 2015.</li>
+									<li>Jae-Won Jang, Asmit De and Swaroop Ghosh, “Recent Trends in Intellectual Property (IP) Protection from Reverse Engineering”, Microprocessor Test and Verification Conference (MTV), 2016 (Invited Paper).</li>
+									<li>Jae-Won Jang and Swaroop Ghosh, “Security of Magnetic Memories: Vulnerabilities, Attack Models, Analyses, and Prevention”, SRC TECHCON 2015.</li>
+									<li>Jae-Won Jang and Swaroop Ghosh, “Improving Robustness of STTRAM Under Magnetic and Thermal Attack”, SRC TECHCON 2016.</li>
+									<li>Jae-Won Jang, Deepak Reddy Vontela, Ithihasa Reddy Nirmala, and Swaroop Ghosh, “A Novel Threshold Voltage Defined Multiplexer for Interconnect Camouflaging”, Government Microcircuit Applications and Critical Technology (GOMATech-17), 2017.</li>
+									<li>Jae-Won Jang and Swaroop Ghosh, “Security of Magnetic Memories: Vulnerabilities, Attack Models, Analyses and Preventions”, Government Microcircuit Applications and Critical Technology (GOMATech-16), 2016.</li>
+									<li>Cheng-Wei Lin, Jae-Won Jang, and Swaroop Ghosh, “Schmitt-Trigger-Based Recycling Sensor and Robust and High-Quality PUFs for Counterfeit IC Detection”, Government Microcircuit Applications and Critical Technology (GOMATech-15), 2015.</li>
+									<li>Alexander Holst, Jae-Won Jang and Swaroop Ghosh, “Investigation of Magnetic Field-Based Attacks on Magnetoresistive Random-Access Memory”, International Symposium on Quality Electronic Design Conference (ISQED), 2017.</li>
+									<li>Swaroop Ghosh, Nasim Khan, Asmit De, Jae-Won Jang, “Security and Privacy Threats to On-Chip Non-Volatile Memories and Countermeasures”, Proceedings of the 35th International Conference on Computer-Aided Design (ICCAD ’16), 2016 (Invited Paper).</li>
+								</ul>
+								<h2>Work-in-Progress / Demonstration</h2>
+								<ul>
+									<li>Jae-Won Jang and Swaroop Ghosh, “Data Integrity of STTRAM Vulnerabilities, Attack Models and Preventions”, Design Automation Conference (DAC), 2016 (WIC).</li>
+									<li>Alexander Holst, Swaroop Ghosh, and Jae-Won Jang, “Investigation of Magnetic Field-Based Attacks on Magnetoresistive Random-Access Memory (Demo Proposal)”, IEEE International Symposium on Hardware Oriented Security and Trust (HOST), 2016.</li>
+									<li>Anirudh Iyengar, Kenneth Ramclam, Jae-Won Jang and Cheng Wei Lin, Spintronic PUFs for Security, Trust and Authentication, Cyber Security Awareness Week Conference (CSAW), 2014. (3rd Place)</li>
+
+								</ul>
+                        				</div> <!-- stuff -->
 						</div>
 					</section>
 
@@ -183,8 +168,8 @@
 							<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Sed ipsum dolor</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<h2>SQL Project</h2>
+									<p>Project to refresh my memories on SQL.</p>
 									<ul class="actions">
 										<li><a href="#" class="button">Learn more</a></li>
 									</ul>
@@ -195,8 +180,7 @@
 							<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Feugiat consequat</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<h2>To come...</h2>
 									<ul class="actions">
 										<li><a href="#" class="button">Learn more</a></li>
 									</ul>
@@ -207,8 +191,7 @@
 							<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Ultricies aliquam</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<h2>To come...</h2>
 									<ul class="actions">
 										<li><a href="#" class="button">Learn more</a></li>
 									</ul>
