--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
 							<div class="stuff">
 							<h1>Publications</h1>
                                 				<h2>Journals</h2> <!-- heading -->
+								<li style="color:white"</li>
                                           			<ul>
 									<li>Jae-Won Jang, Asmit De, Deepak Vontela, Ithihasa Nirmala, Swaroop Ghosh, and Anirudh Iyengar, “Threshold-defined Logic and Interconnect for Protection against Reverse Engineering”, Transactions on Information Forensics and Security (TFIS). (Impact Factor: 4.3) – Submitted For Review - </li>
 
@@ -198,51 +199,6 @@
 								</div>
 							</div>
 						</section>
-					</section>
-					<section id="contact" class="wrapper style1 fade-up">
-						<div class="inner">
-							<h2>Get in touch</h2>
-							<p>Currently looking for different positions as well as applying for multiple graduate programs. Please contact me if you have any further questions! Thank you :D</p>
-							<div class="split style1">
-								<section>
-									<form method="post" action="#">
-										<div class="field half first">
-											<label for="name">Name</label>
-											<input type="text" name="name" id="name" />
-										</div>
-										<div class="field half">
-											<label for="email">Email</label>
-											<input type="text" name="email" id="email" />
-										</div>
-										<div class="field">
-											<label for="message">Message</label>
-											<textarea name="message" id="message" rows="5"></textarea>
-										</div>
-										<ul class="actions">
-											<li><a href="" class="button submit">Send Message</a></li>
-										</ul>
-									</form>
-								</section>
-								<section>
-									<ul class="contact">
-										<li>
-											<h3>Email</h3>
-											<a href="mailto:jxj328@psu.edu">jxj328@psu.edu</a>
-										</li>
-										<li>
-											<h3>Address</h3>
-											<span>Please contact me via email first
-										</li>
-										
-										<li>
-											<h3>Phone</h3>
-											<span>Please contact me via email first</span>
-										</li>
-																					</li>
-									</ul>
-								</section>
-							</div>
-						</div>
 					</section>
 			</div>
 		<!-- Footer -->
