--- a/index.html
+++ b/index.html
@@ -128,8 +128,7 @@
 							<div class="stuff">
 							<h1>Publications</h1>
                                 				<h2>Journals</h2> <!-- heading -->
-								<li style="color:white"</li>
-                                          			<ul>
+                                          			<ul style="color:white">
 									<li>Jae-Won Jang, Asmit De, Deepak Vontela, Ithihasa Nirmala, Swaroop Ghosh, and Anirudh Iyengar, “Threshold-defined Logic and Interconnect for Protection against Reverse Engineering”, Transactions on Information Forensics and Security (TFIS). (Impact Factor: 4.3) – Submitted For Review - </li>
 
     									<li>Anirudh Iyengar, Swaroop Ghosh, and Jae-Won Jang, “MTJ-based State Retentive Flip-Flop with Enhanced-Scan Capability to Sustain Sudden Power Failure”, Transactions on Circuits and Systems I (TCAS-I). (Impact Factor: 2.3) </li>
@@ -139,7 +138,7 @@
 									<li>Anirudh Iyengar, Kenneth Ramclam, Swaroop Ghosh, Jae-Won Jang and Cheng-Wei Lin, “Spintronic PUFs for Security, Trust and Authentication”, ACM Journal of Emerging Topics Computing Systems (JETC Special Issue). (Impact Factor 0.83)  </li>
 					  			</ul>
 								<h2>Conference Papers</h2>
-								<ul>
+								<ul style="color:white">
 									<li>Jae-Won Jang, Jongsun Park, Swaroop Ghosh, and Swarup Bhunia, “Self-Correcting STTRAM under Magnetic Field Attacks”, Design Automation Conference (DAC), 2015.</li>
 									<li>Jae-Won Jang and Swaroop Ghosh, “Performance Impact of Magnetic and Thermal Attack on STTRAM and Low-Overhead Mitigation Techniques”, The International Symposium on Low Power Electronics and Design (ISLPED), 2016. Acceptance Rate = ~25%</li>
 									<li>Jae-Won Jang and Swaroop Ghosh, “Design and Analysis of Novel SRAM PUFs with Embedded Latch for Robustness”, International Symposium on Quality Electronic Design Conference (ISQED), 2015.</li>
@@ -153,7 +152,7 @@
 									<li>Swaroop Ghosh, Nasim Khan, Asmit De, Jae-Won Jang, “Security and Privacy Threats to On-Chip Non-Volatile Memories and Countermeasures”, Proceedings of the 35th International Conference on Computer-Aided Design (ICCAD ’16), 2016 (Invited Paper).</li>
 								</ul>
 								<h2>Work-in-Progress / Demonstration</h2>
-								<ul>
+								<ul style="color:white">
 									<li>Jae-Won Jang and Swaroop Ghosh, “Data Integrity of STTRAM Vulnerabilities, Attack Models and Preventions”, Design Automation Conference (DAC), 2016 (WIC).</li>
 									<li>Alexander Holst, Swaroop Ghosh, and Jae-Won Jang, “Investigation of Magnetic Field-Based Attacks on Magnetoresistive Random-Access Memory (Demo Proposal)”, IEEE International Symposium on Hardware Oriented Security and Trust (HOST), 2016.</li>
 									<li>Anirudh Iyengar, Kenneth Ramclam, Jae-Won Jang and Cheng Wei Lin, Spintronic PUFs for Security, Trust and Authentication, Cyber Security Awareness Week Conference (CSAW), 2014. (3rd Place)</li>
