--- a/index.html
+++ b/index.html
@@ -21,9 +21,6 @@
                         				<li><a href="#cv">CV</a></li>
                         				<li><a href="#pubs">Publications</a></li>
                         				<li><a href="#projs">Projects</a></li>
-							<li><a href="#contact">Contact Me</a></li>
-
-
 						</ul>
 					</nav>
 				</div>
@@ -204,7 +201,7 @@
 			<footer id="footer" class="wrapper style1-alt">
 				<div class="inner">
 					<ul class="menu">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 				</div>
 			</footer>
